<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01B2FF"
    android:orientation="vertical"
    tools:context="com.xiaoma.im.activities.LoginActivity">

    <ImageView
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/welcome" />

    <EditText
        android:elevation="10dp"
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24sp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24sp"
        android:background="@drawable/shape_oval"
        android:hint="@string/prompt_number"
        android:inputType="number"
        android:paddingLeft="8dp" />

    <EditText
        android:elevation="10dp"
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24sp"
        android:background="@drawable/shape_oval"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_oval"
        android:text="@string/action_sign_in" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ly_login_registry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_registry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:text="@string/login_registry"
                android:textColor="#fff"
                android:textSize="16dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="|"
                android:textColor="#cccccc"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_login_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:text="@string/login_agreement"
                android:textColor="#fff"
                android:textSize="16dp"
                android:textStyle="normal" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>